--- a/.vsconfig
+++ b/.vsconfig
@@ -51,6 +51,8 @@
     "Microsoft.VisualStudio.Component.WslDebugging",
     "Microsoft.VisualStudio.Component.IntelliCode",
     "Microsoft.NetCore.Component.Runtime.6.0",
+    "microsoft.net.runtime.mono.tooling",
+    "microsoft.net.runtime.mono.tooling.net7",
     "microsoft.net.runtime.mono.tooling.net6",
     "Microsoft.VisualStudio.Workload.NetWeb",
     "Microsoft.VisualStudio.Component.Azure.ClientLibs",
@@ -66,11 +68,48 @@
     "Microsoft.VisualStudio.Component.Azure.ServiceFabric.Tools",
     "Microsoft.VisualStudio.Component.Azure.Powershell",
     "Microsoft.VisualStudio.Workload.Azure",
+    "maui.core",
+    "maui.blazor",
+    "microsoft.net.runtime.android.net7",
+    "microsoft.net.runtime.android.aot.net7",
+    "microsoft.net.runtime.android",
+    "microsoft.net.runtime.android.aot",
+    "android",
+    "Component.OpenJDK",
+    "Microsoft.VisualStudio.Component.MonoDebugger",
+    "Microsoft.VisualStudio.Component.Merq",
+    "Microsoft.VisualStudio.ComponentGroup.Maui.Android",
+    "runtimes.ios",
+    "microsoft.net.runtime.ios",
+    "runtimes.ios.net7",
+    "microsoft.net.runtime.ios.net7",
+    "ios",
+    "Component.Xamarin.RemotedSimulator",
+    "Microsoft.VisualStudio.ComponentGroup.Maui.iOS",
+    "runtimes.maccatalyst",
+    "microsoft.net.runtime.maccatalyst",
+    "runtimes.maccatalyst.net7",
+    "microsoft.net.runtime.maccatalyst.net7",
+    "maccatalyst",
+    "Microsoft.VisualStudio.ComponentGroup.Maui.MacCatalyst",
+    "maui.windows",
+    "Microsoft.VisualStudio.ComponentGroup.MSIX.Packaging",
+    "Microsoft.VisualStudio.ComponentGroup.Maui.Windows",
+    "Microsoft.VisualStudio.ComponentGroup.Maui.Blazor",
+    "Microsoft.VisualStudio.ComponentGroup.WebToolsExtensions.TemplateEngine",
+    "Microsoft.VisualStudio.ComponentGroup.Maui.Shared",
+    "Microsoft.VisualStudio.ComponentGroup.Maui.All",
+    "Microsoft.VisualStudio.Workload.NetCrossPlat",
     "Microsoft.VisualStudio.Component.ManagedDesktop.Prerequisites",
     "Microsoft.VisualStudio.Component.DotNetModelBuilder",
     "Microsoft.ComponentGroup.Blend",
     "Microsoft.VisualStudio.Workload.ManagedDesktop",
     "Microsoft.VisualStudio.Workload.Data",
+    "Microsoft.VisualStudio.Component.LinqToSql",
     "Microsoft.NetCore.Component.Runtime.7.0"
+  ],
+  "extensions": [
+    "https://marketplace.visualstudio.com/items?itemName=PaulHarrington.EditorGuidelinesPreview",
+    "https://marketplace.visualstudio.com/items?itemName=MadsKristensen.FileIcons"
   ]
 }
